--- a/styles/main.css
+++ b/styles/main.css
@@ -1,4 +1,4 @@
-/*
+
       _   _________       __
      / | / / ____/ |     / /
     /  |/ / __/  | | /| / / 
@@ -11,7 +11,7 @@
    / __/ / _, _/ /_/ /___/ // / / _, _/ ___ |/ / _/ // /_/ / /|  /  
   /_/   /_/ |_|\____//____//_/ /_/ |_/_/  |_/_/ /___/\____/_/ |_/   
 
-*/
+
 
 html {
   overflow-y: scroll; /*keeps scrollbar active*/
@@ -19,7 +19,7 @@ html {
 }
 
 body{
-  
+  background-color: #15DAF9;
   max-width: 1000px; /*margins*/
 	margin: 0 auto; /*centers content*/
 	/*height: 100%;*/
@@ -217,7 +217,6 @@ a:visited {
 a:hover {
   text-decoration: none;
   color: white;
-  
 }
 
 a:active{
@@ -227,10 +226,12 @@ a:active{
 
  a.nav-links:hover{
   text-shadow: 5px 5px 5px black;
+  color: white;
 }
 
-a.navilinks:active{
+a.nav-links:active{
   text-shadow: 5px 5px 5px black;
+  white: white;
 }
 
 
@@ -250,25 +251,43 @@ a.navilinks:active{
 
 /*Footer*/
 footer{
+  background-color: black;
   display: flex;
   justify-content: space-between;
-  text-align: center;
+  text-align: left;
   clear: both;
- 
+
 }
 
-footer > p{
+footer  a:link{
+  color: #15DAF9;
+
+}
+
+footer a:hover{
+  text-decoration: underline;
+}
+
+footer a:visited{
+  color: #15DAF9;
+  
+}
+
+footer p{
   align-self: center;
-  color: black;
+  color: #15DAF9;
+  padding: 0 5px 0 5px;
 }
 
 .footer{
-  background: #15DAF9;
+  background: black;
   max-width: 1000px;
   width: 100%;
   height: 50px;
   position: fixed;
   bottom: 0;
+  margin: 5px;
+  padding: 15px;
   
 }
 
@@ -292,4 +311,4 @@ footer > p{
   width: 100%;
   height: 100%;
   padding-bottom: 56.25%
-}*/
+}
