--- a/styles/main.css
+++ b/styles/main.css
@@ -15,11 +15,12 @@
 
 html {
   overflow-y: scroll; /*keeps scrollbar active*/
-  background: #15DAF9;
+  /*background: #15DAF9;*/
 }
 
 body{
-  background-color: #15DAF9;
+  /*background-color: #15DAF9;*/
+  background-color: #f913f2;
   max-width: 1000px; /*margins*/
 	margin: 0 auto; /*centers content*/
 	/*height: 100%;*/
@@ -133,7 +134,8 @@ div.gallery img {
   }
   /* Overlay text*/
   .text{
-    color: #15DAF9;
+    /*color: #15DAF9;*/
+    color: #f913f2;
     font-size: 300%;
     text-align: center;
     position: absolute;
@@ -175,7 +177,8 @@ div.gallery img {
 
   /* Overlay text*/
   .text{
-    color: #15DAF9;
+    /*color: #15DAF9;*/
+    color: #f913f2;
     font-size: 200%;
     text-align: center;
     position: absolute;
@@ -260,7 +263,8 @@ footer{
 }
 
 footer  a:link{
-  color: #15DAF9;
+  /*color: #15DAF9;*/
+  color: #f913f2;
 
 }
 
@@ -269,13 +273,15 @@ footer a:hover{
 }
 
 footer a:visited{
-  color: #15DAF9;
+  /*color: #15DAF9;*/
+  color: #f913f2;
   
 }
 
 footer p{
   align-self: center;
-  color: #15DAF9;
+  /*color: #15DAF9;*/
+  color: #f913f2;
   padding: 0 5px 0 5px;
 }
 
